# rust-static-file-server

./: Cargo.toml
src/: main.rs
