[package]
name = "video_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.12"
http-range-header = "0.3.0"
serde = "1.0.158"
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
